--- a/src/app.html
+++ b/src/app.html
@@ -29,7 +29,7 @@
       gtag("config", "UA-185827357-1");
     </script>
   </head>
-  <body data-sveltekit-preload="tap" class="h-full min-h-screen">
+  <body data-sveltekit-preload="tap" class="h-full min-h-screen pr-0!">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
