--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="data-[mode=dark]:nice-colors-light group/html data-[mode=light]:nice-colors-dark data-[mode=light]:light overflow-x-clip scroll-smooth text-text" data-theme="default" data-mode="dark">
+<html lang="en" class="data-[mode=dark]:nice-colors-light group/html data-[mode=light]:nice-colors-dark data-[mode=light]:light text-text overflow-x-clip scroll-smooth" data-theme="default" data-mode="dark">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
